# python-template-project

./: .gitignore  .project  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
src/template/sample/: sample.py
src/tests/: test_sample.py
