[metadata]
name = template
summary = Python project template
description-file =
    README.rst
author = HashData
author-email = wang@hashdata.cn
home-page = http://www.hashdata.cn/
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    template

[entry_points]
console_scripts =
    template = template.cmd.command:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
